--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,13 +1,51 @@
 body {
-text-align: center;}
+text-align: center;
+font-family: Helvetica, sans-serif;
+}
 h1 {
-  font-family: Helvetica, sans-serif;
   color: white;
   font-size: 70px;
   font-style: bold;
 }
 
-.header {
-  background-image: url("./resources/images/the-flatiron-building.png");
+h2 {
+  font-size: 32px;
+  font-style: bold;
+}
 
+h3 {
+  font-size: 23px;
+  font-style: bold;
+}
+
+p {
+  font-size: 14px;
+}
+
+.nav a {
+  font-size: 18px;
+  color: white;
+}
+
+.hero {
+  background-image: url("../../resources/images/the-flatiron-building.png");
+  text-align: center;
+  color: white;
+}
+
+.hero h2 {
+  font-size: 23px;
+  font-style: bold;
+}
+
+.footer {
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
+  text-align: left;
+}
+
+.footer a {
+  font-size: 18px;
+  color: white;
 }
